--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,10 @@
     <groupId>users</groupId>
     <artifactId>UserApplication</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <properties>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+    </properties>
 <dependencies>
     <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
     <dependency>
